<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ResultActivity"
    android:orientation="vertical"
    android:background="@drawable/ic_bg1"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:elevation="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/goldman"
                android:gravity="center"
                android:text="@string/results"
                android:textColor="#14213d"
                android:textSize="50sp"
                android:textStyle="bold"
                android:layout_marginBottom="-25dp"/>

            <pl.droidsonroids.gif.GifImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/trophy_1"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/hey_congratulations"
                android:textColor="#14213d"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/username"
                android:textColor="#14213d"
                android:textSize="22sp"
                android:layout_marginBottom="5dp"
                />

            <TextView
                android:id="@+id/tv_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/you_score_is_10_out_of_10"
                android:textColor="#14213d"
                android:textSize="20sp"
                android:layout_marginBottom="5dp"
                />

            <Button
                android:id="@+id/btn_finish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#14213d"
                android:fontFamily="@font/nunito_sans"
                android:text="@string/finish"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>