<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizQuestionsActivity"
    android:fillViewport="true"
    android:background="@drawable/ic_bg2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/questionId"
            android:layout_margin="10dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:text="@string/what_country_s_flag_is_this"
            android:fontFamily="@font/nunito_sans"
            android:textStyle="bold"
            android:backgroundTint="@color/black"
            >

        </TextView>

        <ImageView
            android:id="@+id/iv_image"
            android:layout_width="365dp"
            android:layout_height="227dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_flag_of_argentina" />

        <LinearLayout
            android:id="@+id/ll_progress_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical">

            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="15"
                android:min="0"
                android:minHeight="50dp"
                android:progress="0"
                android:indeterminate="false"
                android:progressBackgroundTint="@color/black"
                />

            <TextView
                android:id="@+id/tv_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="0/15"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/optionOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/default_option_border_bg"
            android:gravity="center"
            android:padding="15dp"
            android:textSize="18sp"
            tools:text="@string/option_one"
            android:fontFamily="@font/nunito_sans"
            android:textColor="#000000"
            />

        <TextView
            android:id="@+id/optionTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/default_option_border_bg"
            android:gravity="center"
            android:padding="15dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            tools:text="@string/option_two"
            android:fontFamily="@font/nunito_sans"
            />

        <TextView
            android:id="@+id/optionThree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/default_option_border_bg"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:text="@string/option_three"
            android:fontFamily="@font/nunito_sans"
            />

        <TextView
            android:id="@+id/optionFour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/default_option_border_bg"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:text="@string/option_four"
            android:fontFamily="@font/nunito_sans"
            />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/sumbit"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:fontFamily="@font/nunito_sans"
            android:backgroundTint="@color/black"
            android:paddingVertical="12dp"/>

    </LinearLayout>

</ScrollView>